Correções CSS na página de relatório/ estilização

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>Manage Money</title>
 </head>
 <body>
+
     
     <header class="cabecalho">
         <div id="cabecalhoLogo">
@@ -109,14 +110,14 @@
     </section>
 
     <section>
-        <h4>
-            SOBRE NÓS
-        </h4>
-            <p>
+        <h2 class="sobreNos">
+            <i class="arrow right"></i> SOBRE NÓS
+        </h2>
+            <h3>
                 Procurando um aplicativo para controlar suas finanças?
-            </p>
+            </h3>
             <p>
-                Conheça o <b>Manage Money</b>, uma solução simples, funcional e intuitiva que lhe permitirá gerenciar suas despesas e receitas. 
+                Conheça o <span class="destaqueTextoVerde">Manage Money</span>, uma solução simples, funcional e intuitiva que lhe permitirá gerenciar suas despesas e receitas. 
             </p>
 
             <div>
@@ -156,7 +157,7 @@
                         </li>
                 </ul>                    
                 <p>
-                    Com o <b>Manage Money</b> você acompanha sua evolução financeira através de gráficos. 
+                    Com o <span class="destaqueTextoVerde">Manage Money</span> você acompanha sua evolução financeira através de gráficos. 
                 </p>
                 <p>
                     Também é possível exportar os lançamentos para Excel e PDF.
