--- a/relatorio.html
+++ b/relatorio.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="./css/style.css">
     <title>Relatorios mensais</title>
 
     <Style>
@@ -63,34 +64,31 @@
             </tr>
         </thead>
         <tbody>
+        <!-- Conteúdos -->
             <tr>
                 <td>03/11/2022</td>
                 <td>Compra de alimentos para casa</td>
                 <td>Alimentação</td>
                 <td>Mercado</td>
-                <td>
-                    <font color="#FF0000">Gasto</font>
-                </td>
-                <td>
-                    <font color="#FF0000">Débito</font>
-                </td>
-                <td align="right">
-                    <font color="#FF0000">800,00</font>
-                </td>
+                <td td class="gasto">
+                    Gasto</td>
+                <td class="gasto">
+                    Débito</td>
+                <td class="gasto" align="right">
+                    800,00</td>
             </tr>
             <tr>
                 <td>05/11/2022</td>
                 <td>Unialfa - Mensalidade</td>
                 <td>Educação</td>
                 <td>Faculdade</td>
-                <td>
-                    <font color="#FF0000">Gasto</font>
+                <td class="gasto">Gasto
                 </td>
-                <td>
-                    <font color="#FF0000">Débito</font>
+                <td class="gasto">
+                    Débito
                 </td>
-                <td align="right">
-                    <font color="#FF0000">650,00</font>
+                <td class="gasto" align="right">
+                    650,00
                 </td>
             </tr>
             <tr>
@@ -98,14 +96,14 @@
                 <td>Open English</td>
                 <td>Educação</td>
                 <td>Curso</td>
-                <td>
-                    <font color="#FF0000">Gasto</font>
+                <td class="gasto">
+                    Gasto
                 </td>
-                <td>
-                    <font color="#FF0000">Débito</font>
+                <td class="gasto">
+                    Débito
                 </td>
-                <td align="right">
-                    <font color="#FF0000">150,00</font>
+                <td class="gasto" align="right">
+                    150,00
                 </td>
             </tr>
             <tr>
@@ -113,14 +111,14 @@
                 <td>Salário mensal</td>
                 <td>Remuneração</td>
                 <td>Salário Mensal</td>
-                <td>
-                    <font color="#0000ff">Receita</font>
+                <td class="receita">
+                    Receita
                 </td>
-                <td>
-                    <font color="#0000ff">Entrada Conta Corrente</font>
+                <td class="receita">
+                    Entrada Conta Corrente
                 </td>
-                <td align="right">
-                    <font color="#0000ff">5000,00</font>
+                <td class="receita" align="right">
+                    5000,00
                 </td>
             </tr>
             <tr>
@@ -128,14 +126,14 @@
                 <td>Prestação Imóvel</td>
                 <td>Habitação</td>
                 <td>Financiamento</td>
-                <td>
-                    <font color="#FF0000">Gasto</font>
+                <td class="gasto">
+                    Gasto
                 </td>
-                <td>
-                    <font color="#FF0000">Débito</font>
+                <td class="gasto">
+                    Débito
                 </td>
-                <td align="right">
-                    <font color="#FF0000">1500,00</font>
+                <td class="gasto" align="right">
+                    1500,00
                 </td>
             </tr>
             <tr>
@@ -143,14 +141,14 @@
                 <td>Prestação carro 23/48</td>
                 <td>Tranporte</td>
                 <td>Financiamento</td>
-                <td>
-                    <font color="#FF0000">Gasto</font>
+                <td class="gasto">
+                    Gasto
                 </td>
-                <td>
-                    <font color="#FF0000">Débito</font>
+                <td class="gasto">
+                    Débito
                 </td>
-                <td align="right">
-                    <font color="#FF0000">1200,00</font>
+                <td class="gasto" align="right">
+                    1200,00
                 </td>
             </tr>
             <tr>
@@ -158,14 +156,14 @@
                 <td>Manicure</td>
                 <td>Higiene e Beleza</td>
                 <td>Salão</td>
-                <td>
-                    <font color="#FF0000">Gasto</font>
+                <td class="gasto">
+                    Gasto
                 </td>
-                <td>
-                    <font color="#FF0000">Débito</font>
+                <td class="gasto">
+                    Débito
                 </td>
-                <td align="right">
-                    <font color="#FF0000">40,00</font>
+                <td class="gasto" align="right">
+                    40,00
                 </td>
             </tr>
             <tr>
@@ -173,14 +171,14 @@
                 <td>Enel</td>
                 <td>Habitação</td>
                 <td>Energia Elétrica</td>
-                <td>
-                    <font color="#FF0000">Gasto</font>
+                <td class="gasto">
+                    Gasto
                 </td>
-                <td>
-                    <font color="#FF0000">Débito</font>
+                <td class="gasto">
+                    Débito
                 </td>
-                <td align="right">
-                    <font color="#FF0000">230,00</font>
+                <td class="gasto" align="right">
+                    230,00
                 </td>
             </tr>
             <tr>
@@ -188,14 +186,14 @@
                 <td>Seguro automóvel</td>
                 <td>Transporte</td>
                 <td>Seguro</td>
-                <td>
-                    <font color="#FF0000">Gasto</font>
+                <td class="gasto">
+                    Gasto
                 </td>
-                <td>
-                    <font color="#FF0000">Débito</font>
+                <td class="gasto">
+                    Débito
                 </td>
-                <td align="right">
-                    <font color="#FF0000">300,00</font>
+                <td class="gasto" align="right">
+                    300,00
                 </td>
             </tr>
             <tr>
@@ -203,14 +201,14 @@
                 <td>Combustível</td>
                 <td>Transporte</td>
                 <td>Combustível</td>
-                <td>
-                    <font color="#FF0000">Gasto</font>
+                <td class="gasto">
+                    Gasto
                 </td>
-                <td>
-                    <font color="#FF0000">Débito</font>
+                <td class="gasto">
+                    Débito
                 </td>
-                <td align="right">
-                    <font color="#FF0000">180,00</font>
+                <td class="gasto" align="right">
+                    180,00
                 </td>
             </tr>
             <tr>
@@ -218,14 +216,14 @@
                 <td>Fulana de Tal</td>
                 <td>Habitação</td>
                 <td>Diarista</td>
-                <td>
-                    <font color="#FF0000">Gasto</font>
+                <td class="gasto">
+                    Gasto
                 </td>
-                <td>
-                    <font color="#FF0000">Débito</font>
+                <td class="gasto">
+                    Débito
                 </td>
-                <td align="right">
-                    <font color="#FF0000">100,00</font>
+                <td class="gasto" align="right">
+                    100,00
                 </td>
             </tr>
             <tr>
@@ -233,14 +231,14 @@
                 <td>Unimed</td>
                 <td>Saúde</td>
                 <td>Plano de Saúde</td>
-                <td>
-                    <font color="#FF0000">Gasto</font>
+                <td class="gasto">
+                    Gasto
                 </td>
-                <td>
-                    <font color="#FF0000">Débito</font>
+                <td class="gasto">
+                    Débito
                 </td>
-                <td align="right">
-                    <font color="#FF0000">480,00</font>
+                <td class="gasto" align="right">
+                    480,00
                 </td>
             </tr>
             <tr>
@@ -248,14 +246,14 @@
                 <td>SmartFit</td>
                 <td>Saúde</td>
                 <td>Academia</td>
-                <td>
-                    <font color="#FF0000">Gasto</font>
+                <td class="gasto">
+                    Gasto
                 </td>
-                <td>
-                    <font color="#FF0000">Débito</font>
+                <td class="gasto">
+                    Débito
                 </td>
-                <td align="right">
-                    <font color="#FF0000">99,00</font>
+                <td class="gasto" align="right">
+                    99,00
                 </td>
             </tr>
             <tr>
@@ -263,14 +261,14 @@
                 <td>Manicure e Sobrancelha </td>
                 <td>Higiene e Beleza</td>
                 <td>Salão</td>
-                <td>
-                    <font color="#FF0000">Gasto</font>
+                <td class="gasto">
+                    Gasto
                 </td>
-                <td>
-                    <font color="#FF0000">Débito</font>
+                <td class="gasto">
+                    Débito
                 </td>
-                <td align="right">
-                    <font color="#FF0000">80,00</font>
+                <td class="gasto" align="right">
+                    80,00
                 </td>
             </tr>
             <tr>
@@ -278,14 +276,14 @@
                 <td>Lanche</td>
                 <td>Alimentação</td>
                 <td>Fastfood</td>
-                <td>
-                    <font color="#FF0000">Gasto</font>
+                <td class="gasto">
+                    Gasto
                 </td>
-                <td>
-                    <font color="#FF0000">Débito</font>
+                <td class="gasto">
+                    Débito
                 </td>
-                <td align="right">
-                    <font color="#FF0000">42,00</font>
+                <td class="gasto" align="right">
+                    42,00
                 </td>
             </tr>
             <tr>
@@ -293,14 +291,14 @@
                 <td>Ingressos</td>
                 <td>Lazer</td>
                 <td>Cinema</td>
-                <td>
-                    <font color="#FF0000">Gasto</font>
+                <td class="gasto">
+                    Gasto
                 </td>
-                <td>
-                    <font color="#FF0000">Débito</font>
+                <td class="gasto">
+                    Débito
                 </td>
-                <td align="right">
-                    <font color="#FF0000">64,00</font>
+                <td class="gasto" align="right">
+                    64,00
                 </td>
             </tr>
             <tr>
@@ -308,42 +306,37 @@
                 <td>Freelancer</td>
                 <td>Remuneração</td>
                 <td>Renda Extra</td>
-                <td>
-                    <font color="#0000ff">Receita</font>
+                <td class="receita">
+                    Receita
                 </td>
-                <td>
-                    <font color="#0000ff">Entrada Conta Corrente</font>
+                <td class="receita">
+                    Entrada Conta Corrente
                 </td>
-                <td align="right">
-                    <font color="#0000ff">850,00</font>
+                <td class="receita" align="right">
+                    850,00
                 </td>
             </tr>
             <tr>
                 <td colspan="7" bgcolor="Black"></td>
             </tr>
+            <!-- Cálculos -->
             <tr>
                 <td colspan="4"></td>
-                <td bgcolor="blue" colspan="2">
-                    <font color="#FFFFFF">Total Receita</font>
-                </td>
-                <td bgcolor="blue" align="right">
-                    <font color="#FFFFFF">5850,00</font>
+                <td colspan="2" class="cReceita"> Total Receita </td>
+                <td class="cReceita"> 5850,00
                 </td>
             </tr>
             <tr>
                 <td colspan="4"></td>
-                <td bgcolor="Red" colspan="2">
-                    <font color="#FFFFFF">Total Despesas</font>
-                </td>
-                <td bgcolor="Red" align="right">
-                    <font color="#FFFFFF">5915,00</font>
+                <td colspan="2" class="cGasto"> Total Despesas </td>
+                <td class="cGasto">5915,00
                 </td>
             </tr>
             <tr>
                 <td colspan="4"></td>
                 <td colspan="2">Saldo mês</td>
-                <td align="right">
-                    <font color="#FF0000">65,00</font>
+                <td class="gasto" align="right">
+                    65,00
                 </td>
             </tr>
             <tr>
