--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
     <h3 class="text"> Obrigado pelo contato!</h3>
     <p class="paragrafo">Em breve entrarei em contato;</p>
     <a href="#home" class="links">Home</a>
-    <footer class="Redes">
+    <footer class="redes">
         <ul>
 
             <li>
@@ -240,8 +240,6 @@
                     <img src="https://cdn-icons-png.flaticon.com/512/60/60580.png" width="50" height="50" alt="twiter">
                 </a>
             </li>
-
-
         </ul>
     </footer>
 </body>
