--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
     
-    <header class="cabecalho">
+    <header id="home" class="cabecalho">
         <div id="cabecalhoLogo">
             <h1>Manage Money</h1>
         </div>
@@ -24,12 +24,12 @@
                         </a>
                     </li>
                     <li>
-                        <a  class="linksCabecalho">
+                        <a href="#sobre" class="linksCabecalho">
                             Sobre
                         </a>
                     </li>
-                    <li  class="linksCabecalho">
-                        <a>
+                    <li>
+                        <a href="#contato" class="linksCabecalho">
                             Contato
                         </a>    
                     </li>
@@ -187,27 +187,28 @@
             </div>
     </section>
 
-    <section>
+    <section id="contato" class="sessaoContato">
         <h2>Contato</h2>
-        <form action="http://api.staticforms.xyz/submit" method="POST">
-            <label>Nome</label>
+        <form class="formularioContato">
+            <label class="labelContato">Nome</label>
             <input type="text" name="name" placeholder="Digite seu nome" autocomplete="off"
             required>
-            <label>Email</label>
+            <label class="labelContato">Email</label>
             <input type="email" name="email" placeholder="Informe seu e-mail"
             autocomplete="off" required>
-            <label>Mensagem</label>
+            <label class="labelContato">Mensagem</label>
             <textarea name="message" cols="30" rows="10" placeholder="Digite a sua mensagem"
                 required></textarea>
             <button type="submit">Enviar</button>
             <input type="hidden" name="accessKey" value="9993bb59-06fa-4863-a472-48e0fcabc999">
             <input type="hidden" name="redirectTo" value="URL/ip da máquina">
         </form>
+        <h3 class="text"> Obrigado pelo contato!</h3>
+        <p class="paragrafo">Em breve entrarei em contato</p>
+        <a href="#home" class="links">Home</a>
     </section>
 
-    <h3 class="text"> Obrigado pelo contato!</h3>
-    <p class="paragrafo">Em breve entrarei em contato;</p>
-    <a href="#home" class="links">Home</a>
+
     <footer class="Redes">
         <ul>
 
