--- a/index.html
+++ b/index.html
@@ -135,6 +135,7 @@
         <h2 class="sobreNos">
             <i class="arrow right"></i> SOBRE NÓS
         </h2>
+        <div class="conteudoSobre">
             <h3>
                 Procurando um aplicativo para controlar suas finanças?
             </h3>
@@ -185,6 +186,7 @@
                     Também é possível exportar os lançamentos para Excel e PDF.
                 </p>
             </div>
+        </div>
     </section>
 
     <section id="contato" class="sessaoContato">
