Mensagem no Botao Cadastrar

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="./css/style.css">
+    <script src="js/index.js"></script>
     <title>Manage Money</title>
 </head>
 <body>
@@ -77,7 +78,7 @@
                 <input type="password" id="inputConfirmaSenha">
              </div>   
              <div class="divButton">
-                <button class="signButton"> Cadastrar </button>
+                <button class="signButton" onclick="criarConta()"> Cadastrar </button>
             </div>
 
         </section>
