--- a/relatorio.html
+++ b/relatorio.html
@@ -40,17 +40,17 @@
             <nav>
                 <ul>
                     <li>
-                        <a href="#home" class="linksCabecalho">
+                        <a href="./index.html#home" class="linksCabecalho">
                             Home
                         </a>
                     </li>
                     <li>
-                        <a href="#sobre" class="linksCabecalho">
+                        <a href="./index.html#sobre" class="linksCabecalho">
                             Sobre
                         </a>
                     </li>
                     <li>
-                        <a href="#contato" class="linksCabecalho">
+                        <a href="./index.html#contato" class="linksCabecalho">
                             Contato
                         </a>    
                     </li>
