Tela de cadastro de Metas

--- a/index.html
+++ b/index.html
@@ -39,6 +39,11 @@
                             Relatorios
                         </a>    
                     </li>
+                    <li>
+                        <a href="./metas.html" class="linksCabecalho">
+                            Metas
+                        </a>    
+                    </li>
                 </ul>
             </nav>
         </div>
