--- a/relatorio.html
+++ b/relatorio.html
@@ -59,6 +59,11 @@
                             Relatorios
                         </a>    
                     </li>
+                    <li>
+                        <a href="./metas.html" class="linksCabecalho">
+                            Metas
+                        </a>    
+                    </li>
                 </ul>
             </nav>
         </div>
